# img2person

./: .gitignore  .prettierignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  eslint.config.js  package.json  pnpm-lock.yaml  turbo.json
.github/workflows/: ci.yml
apps/api/: package.json
apps/api/src/: app.test.ts  app.ts  disk-store.ts  index.ts
apps/web/: index.html  package.json  tsconfig.json  vite.config.ts
apps/web/src/: api.ts  app.test.tsx  app.tsx  gaussian-splats-3d.d.ts  main.tsx  result.tsx  stage-list.tsx  styles.css  upload-form.tsx  viewer.tsx
docker/: Dockerfile  docker-compose.yml
docs/adr/: 0001-vendor-img2threejs.md  0002-python-inference-service.md  0003-license-policy.md
services/inference/: Dockerfile  Dockerfile.cuda  README.md  pyproject.toml
services/inference/models/: download.py  manifest.json
services/inference/scripts/: runpod-bootstrap.sh
services/inference/src/img2person_inference/: __init__.py  config.py  lhm.py  mock.py  ply.py  scoring.py  server.py
services/inference/tests/: test_download.py  test_lhm.py  test_mock.py  test_ply.py  test_server.py
