[project]
name = "img2person-inference"
version = "0.1.0"
description = "img2person inference service: single-photo reconstruction behind an HTTP boundary"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "AGPL-3.0-only" }
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pillow>=10.4",
    "numpy>=1.26",
    "python-multipart>=0.0.9",
]

[project.scripts]
img2person-inference = "img2person_inference.server:main"

# Real (GPU) inference mode. Kept out of the base install so dev/CI and the CPU
# image never pull torch/CUDA wheels. The LHM++ repo itself is not pip-installable
# (custom CUDA extensions); Dockerfile.cuda installs its remaining requirements.
[project.optional-dependencies]
lhm = [
    "torch==2.3.0",
    "torchvision==0.18.0",
    "accelerate>=0.30",
    "safetensors>=0.4",
    "omegaconf>=2.3",
    "einops>=0.8",
    "timm>=1.0",
    "transformers>=4.41",
    "opencv-python-headless>=4.9",
    "insightface>=0.7.3",
    "onnxruntime-gpu>=1.17; sys_platform == 'linux'",
    "onnxruntime>=1.17; sys_platform != 'linux'",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/img2person_inference"]

[tool.uv.sources]
torch = { index = "pytorch-cu121", marker = "sys_platform == 'linux'" }
torchvision = { index = "pytorch-cu121", marker = "sys_platform == 'linux'" }

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[dependency-groups]
dev = [
    "pytest>=8.3",
    "httpx>=0.27",
    "ruff>=0.9",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
